--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Merry !!</h1>
+	<h1>Merry Christmas!</h1>
 </body>
 </html>
