--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-	<h1>Merry Christmas!</h1>
+	<h1>Merry Christmas and a happy new year!!</h1>
 </body>
 </html>
